--- a/config.example.yml
+++ b/config.example.yml
@@ -1,8 +1,26 @@
 # config
 websocket:
-    address: "localhost"
-    port: 7071
-    path: "ws"
+  address: "localhost"
+  port: 7071
+  path: "ws"
 telnet:
-    host: "localhost"
-    port: 5566
+  host: "localhost"
+  port: 5566
+log:
+  console:
+    out: "stdout"
+    level: "debug"
+    encoder:
+      name: "console"
+      time-format: "2006-01-02T15:04:05"
+  file:
+    out: "tmp/log/app.log"
+    level: "info"
+    encoder:
+      name: "json"
+      time-format: "RFC3339"
+    rotate: true
+    # megabytes
+    max-size: 10
+    max-days: 7
+    max-backups: 10
