--- a/config.example.yml
+++ b/config.example.yml
@@ -1,11 +1,13 @@
 # config
-websocket:
-  address: "localhost"
+web:
+  host: "localhost"
   port: 7071
+websocket:
   path: "ws"
 telnet:
   host: "localhost"
   port: 5566
+  charset: "gbk"
 log:
   console:
     out: "stdout"
