--- a/config.example.yml
+++ b/config.example.yml
@@ -1,8 +1,8 @@
 # config
-debug: false
 web:
   host: "localhost"
   port: 7071
+  debug: false
 websocket:
   scheme: "ws"
   host: "localhost"
@@ -12,6 +12,8 @@ telnet:
   host: "localhost"
   port: 5566
   charset: "gbk"
+  multiConnection: true
+  debug: false
 log:
   console:
     out: "stdout"
