--- a/.air.conf
+++ b/.air.conf
@@ -15,9 +15,9 @@ bin = "cloudrain serve"
 # This log file places in your tmp_dir.
 log = "tmp/log/air-error.log"
 # Watch these filename extensions.
-include_ext = ["go", "html"]
+include_ext = ["go"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["static", "tmp"]
+exclude_dir = ["build", "public", "frontend", "tmp", "node_modules"]
 # There's no necessary to trigger build each time file changes if it's too frequency.
 delay = 1000 # ms
 
