--- a/.air.conf
+++ b/.air.conf
@@ -15,7 +15,7 @@ bin = "cloudrain serve"
 # This log file places in your tmp_dir.
 log = "tmp/log/air-error.log"
 # Watch these filename extensions.
-include_ext = ["go"]
+include_ext = ["go", "yml"]
 # Ignore these filename extensions or directories.
 exclude_dir = ["build", "public", "frontend", "tmp", "node_modules"]
 # There's no necessary to trigger build each time file changes if it's too frequency.
