--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.5.3",
     "chalk": "^4.1.0",
     "css-loader": "^3.6.0",
+    "cssnano": "^5.0.2",
     "dotenv-webpack": "^2.0.0",
     "expose-loader": "^1.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
