--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> Web MUD based on websocket proxy to telnet",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "dev": "webpack serve --config build/webpack.dev.js",
     "build": "node build/build.js"
   },
   "repository": {
@@ -26,28 +26,28 @@
     "@babel/core": "^7.14.6",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.2",
     "chalk": "^4.1.1",
-    "css-loader": "^5.2.7",
+    "css-loader": "^6.1.0",
     "cssnano": "^5.0.6",
-    "dotenv-webpack": "^2.0.0",
-    "expose-loader": "^1.0.3",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.5.2",
+    "dotenv-webpack": "^7.0.3",
+    "expose-loader": "^3.0.0",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.0",
+    "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.6.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "ora": "^4.1.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "node-sass": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "ora": "^5.4.1",
     "portfinder": "^1.0.28",
-    "postcss-loader": "^4.3.0",
+    "postcss-loader": "^6.1.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^3.1.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.1.0",
+    "terser-webpack-plugin": "^5.1.4",
     "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   }
