--- a/.air.conf
+++ b/.air.conf
@@ -17,7 +17,7 @@ log = "tmp/log/air-error.log"
 # Watch these filename extensions.
 include_ext = ["go", "yml"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["build", "public", "frontend", "tmp", "node_modules"]
+exclude_dir = ["web", "tmp"]
 # There's no necessary to trigger build each time file changes if it's too frequency.
 delay = 1000 # ms
 
