change gin to echo, embed web dist files

--- a/.air.conf
+++ b/.air.conf
@@ -3,8 +3,6 @@
 # Working directory
 # . or absolute path, please note that the directories following must be under root
 root = "."
-# Optional! If `watch_dir` is empty, use `root`.
-watch_dir = ""
 tmp_dir = "tmp"
 
 [build]
@@ -17,7 +15,13 @@ log = "tmp/log/air-error.log"
 # Watch these filename extensions.
 include_ext = ["go", "yml"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["web", "tmp"]
+exclude_dir = ["web", "tmp", ".github", ".idea"]
+# Exclude specific regular expressions.
+exclude_regex = ["_test.go", "_example.go"]
+# Exclude unchanged files.
+exclude_unchanged = true
+# Follow symlink for directories
+follow_symlink = true
 # There's no necessary to trigger build each time file changes if it's too frequency.
 delay = 1000 # ms
 
