--- a/configs/app.example.yml
+++ b/configs/app.example.yml
@@ -12,7 +12,7 @@ telnet:
   host: "localhost"
   port: 5566
   charset: "gbk"
-  multiConnection: true
+  gmcpSecret: "change me"
   debug: false
 log:
   console:
