Squashed 'web/' changes from 8eaaa75..145ef0a
145ef0a update npm deps
3f697f6 Bump nth-check from 2.0.0 to 2.0.1 in /web
62cec6d uee xterm.js
d556ebd npm audit fix
56694a1 read runtime config
6fdab5d revert web embed placeholder
e095422 web embed placeholder
55ec2e6 git ignore
1231114 add build-dev, fixs env example
0c5c4bf fixes ansi
53c891e web: websocket
8afd2dd yarn -> npm
93ba2bd yarn -> npm

git-subtree-dir: web
git-subtree-split: 145ef0adf8c9634bedd7a3647e980ffc8ca5f773

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .DS_Store
 node_modules
-/dist
-.yarn
-.yarnrc.yml
+dist
 
 # local env files
 .env.local
 .env.*.local
+
+.env.production
 
 # Log files
 npm-debug.log*
@@ -22,3 +22,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+public/app.config.js
