--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,19 +5,21 @@ on:
     branches: [ master, develop ]
   pull_request:
     branches: [ master, develop ]
-    
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go 1.x
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: ^1.17
+        go-version: ^1.18
       id: go
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+      with:
+        submodules: true
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
